Fixed logo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,8 +75,6 @@ header {
 }
 header > .logo-wrapper img {
 	width: 100px;
-	background-color: #fff;
-	border: 3px solid #444;
 	border-radius: 50%;
 	/* transform: translateY(-15px); */
 }
@@ -121,6 +119,10 @@ nav > a[selected] {
 	font-family: "Dinpro", sans-serif;
 	letter-spacing: 12px;
 	color: #111;
+}
+
+.sub-title-wrapper {
+	min-height: 24px;
 }
 
 article {
@@ -222,6 +224,8 @@ article .footer a {
 	header > .logo-wrapper {
 		height: 100px;
 		transform: translateY(-16px);
+		box-shadow: inset 0px 0px 61px rgba(255, 255, 255, 0.4);
+		border: 3px solid #444;
 	}
 	article > .description > .title {
 		font-size: 32px;
